# CS263_PROJECT

./: .gitignore  README.md  environment.yml  outo_fi_info.csv  pyproject.toml  pytest.ini
configs/: eval_config.yaml  eval_config_fpb_deepseek.yaml  eval_config_fpb_gptoss.yaml  eval_config_fpb_qwen.yaml  keys.example.env
outputs/runs/ollama-deepseek-v3-1-671b-cloud__flare-cfa__n20__20260129_222104/: README.md  agent.jsonl  agent_no_critic.jsonl  baseline.jsonl  cache_agent.json  cache_agent_no_critic.json  cache_baseline.json  compare.md  config_snapshot.yaml  metrics_agent.json  metrics_agent_no_critic.json
outputs/runs/ollama-deepseek-v3-1-671b-cloud__flare-mlesg__n20__20260129_225626/: README.md  agent.jsonl  agent_no_critic.jsonl  baseline.jsonl  cache_agent.json  cache_agent_no_critic.json  cache_baseline.json  compare.md  config_snapshot.yaml  metrics_agent.json  metrics_agent_no_critic.json  metrics_baseline.json
outputs/runs/ollama-deepseek-v3-1-671b-cloud__pixiu-fpb-finben-fomc__n20__20260129_164154/: README.md  agent.jsonl  agent_no_critic.jsonl  baseline.jsonl  cache_agent.json  cache_agent_no_critic.json  cache_baseline.json  compare.md  config_snapshot.yaml  metrics_agent.json  metrics_agent_no_critic.json  metrics_baseline.json
outputs/runs/ollama-deepseek-v3-1-671b-cloud__pixiu-fpb__n20__20260129_201010/: README.md  agent.jsonl  agent_no_critic.jsonl  baseline.jsonl  cache_agent.json  (+6 more)
scripts/: run_eval.py
src/: __init__.py
src/data/: __init__.py  adapters.py  loader.py  schema.py
src/eval/: metrics.py  report.py  runner.py
src/llm/: __init__.py  openai_compat.py  parsing.py  providers.py
src/systems/: __init__.py  baseline_direct.py  finrobot_agent.py  finrobot_tools.py  prompts.py
src/utils/: __init__.py  cache.py  log.py  retry.py  seed.py
tests/: conftest.py  test_adapters.py  test_parsing.py  test_runner_smoke.py
(+101 files in other folders)
